maze.lessons.maze.island.IslandMaze.scala.error
Escaper:4: error: value Nord is not a member of object plm.universe.Direction
		while (!(getDirection==Direction.Nord)) {
                                                 ^