maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
	while (!(getY()==0)) {
		while (!(getDirection==Direction.Nord)) {
			while (!estFaceMur) {
			avance()
		}
		droite()
		}
		
	}
}




	/*while (!estSurBiscuit) {
		gauche()
		while (estFaceMur) {
			droite()
		}
		avance()
	}
	prendBiscuit()*/